--- a/main.html
+++ b/main.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
- <meta charset="UTF-8">
+  <meta charset="UTF-8">
+  <title>Job Application Form</title>
 </head>
 
 <body>
-  
+  <h1>Job Application Form</h1>
 
-  <form>
+  <form method="post">
     <!-- Name -->
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
@@ -23,8 +24,10 @@
     <p>Gender:</p>
     <input type="radio" id="male" name="gender" value="male" required>
     <label for="male">Male</label>
+
     <input type="radio" id="female" name="gender" value="female">
     <label for="female">Female</label>
+
     <input type="radio" id="other" name="gender" value="other">
     <label for="other">Other</label>
     <br><br>
